fix(core): eagerly close BinaryEntryIterator on exhaustion + rate-limit Cleaner warn